2006-06-06  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/highlighting.c: enabled folding for markup filetypes
                       (HTML, XML, PHP, DocBook)
 * src/treeviews.c: replaced "Members" by "Methods" to make it clearer


2006-06-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * doc/geany.docbook: Added save current file behaviour when building.
 * src/sci_cb.c: Fix empty white box glitch with tag autocompletion,
				 also improves typing response efficiency.


2006-06-05  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/dialog.c, src/callbacks.c: Added dialog to show defined keyboard
                                  shortcuts, this replaces the previous
                                  link to the documentation.
 * src/main.c, src/document.c: Fixed wrong setting of filetype when
                               using "All files" as filetype.
 * src/dialogs.c: fixed compiler warning "not enough variable arguments
                  to fit a sentinel"


2006-06-04  Enrico Troeger  <enrico.troeger@uvena.de>

 * README, NEWS: updated for Geany 0.7
 * src/keybindings.c: Changed default keybinding for menu_replace to
                      Ctrl+E.
 * new release: Geany 0.7 "Ravik"
 * configure.in: Fixed svn detection code, changed version to 0.8.


2006-06-03  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/sci_cb.c: Fixed bug in auto completion of constructs.
 * doc/geany.docbook: Added documentation for filetype definition files
                      and definable keyboard shortcuts.


2006-06-03  Nick Treleaven  <nick.treleaven@btinternet.com>

 * doc/geany.docbook: More minor corrections/rewording.
                      Added Build System section.
                      Some corrections to the Filetypes section.


2006-06-02  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/highlighting.c, data/filetypes.css: improved colouring
 * src/utils.c: Added some sanity checks if filetype is NULL.